@@ -147,6 +147,8 @@ Check the \fI<trove>\fB:source\fR component out of the repository
 and put it in directory \fI<dir>\fP if specified, and directory
 \fI<trove>\fP otherwise.  Fetches the most recent version
 specified by \fBbuildLabel\fP unless \fI<version>\fP is specified.
+Multiple source troves may be specified if the \-\-dir option is
+not used.
 Synonyms: \fBco\fP
 .TP
 .B clone newclone [\fItrovename\fP[=\fIversion\fP][\fI<flavor>\fP]]*
